--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
 <body>
     <%- include('./partials/agregarProd.ejs') %>
     <br>
+    <%- include('./mainList.ejs') %>
+    <br>
     <%- include('./partials/chat.ejs') %>
     <br>
     <script src="./socket.io/socket.io.min.js"></script>
