--- a/views/partials/list.ejs
+++ b/views/partials/list.ejs
@@ -7,7 +7,7 @@
             <th scope="col">Foto</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="table-body">
         <% products.forEach(products=>{ %>
             <tr>
                 <td class="table-info"><%= products.id %></td>
