--- a/views/partials/agregarProd.ejs
+++ b/views/partials/agregarProd.ejs
@@ -4,16 +4,16 @@
     <form action="/productos" method="post">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label" style="font-weight: bold;">Nombre</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" name="title" placeholder="Nombre">
+            <input type="text" class="form-control" id="title" name="title" placeholder="Nombre">
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label" style="font-weight: bold;">Precio</label>
-            <input type="number" class="form-control" id="exampleFormControlInput1" name="price" placeholder="Precio">
+            <input type="number" class="form-control" id="price" name="price" placeholder="Precio">
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label" style="font-weight: bold;">Imagen</label>
-            <input type="url" class="form-control" id="exampleFormControlInput1" name="image">
+            <input type="url" class="form-control" id="image" name="image">
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-primary" id="guardar">Guardar</button>
     </form>
 </div>
